# z-bar-qt

./: .gitignore  .qmlformat.ini  AGENTS.md  Bar.qml  CMakeLists.txt  Clock.qml  PKGBUILD  README.md  Time.qml  Wallpaper.qml  flake.nix  image_colors.json  result  shell.qml  updates.txt
.pyre/: pyre.stderr
Components/: Anim.qml  AnimatedTabIndexPair.qml  BaseStyledSlider.qml  CAnim.qml  CircularIndicator.qml  CircularProgress.qml  ColorArcPicker.qml  ColoredIcon.qml  CustomAudioSlider.qml  CustomBusyIndicator.qml  CustomButton.qml  CustomClippingRect.qml  CustomComboBox.qml  CustomFlickable.qml  CustomIcon.qml  CustomListView.qml  CustomRadioButton.qml  CustomScrollBar.qml  CustomSlider.qml  CustomSpinBox.qml  CustomSplitButton.qml  CustomSplitButtonRow.qml  CustomSwitch.qml  CustomText.qml  CustomTextField.qml  CustomTextInput.qml  CustomTooltip.qml  CustomTooltipContent.qml  CustomWindow.qml  Elevation.qml  ExtraIndicator.qml  FilledSlider.qml  IconButton.qml  MarqueeText.qml  MaterialIcon.qml  Menu.qml  MenuItem.qml  OpacityMask.qml  PathMenu.qml  PathViewMenu.qml  (+2 more)
Config/: AccentColor.qml  Appearance.qml  AppearanceConf.qml  BackgroundConfig.qml  BarConfig.qml  Colors.qml  Config.qml  DashboardConfig.qml  DockConfig.qml  DynamicColors.qml  General.qml  Launcher.qml  LockConf.qml  MaterialEasing.qml  NotifConfig.qml  Osd.qml  Overview.qml  Services.qml  SidebarConfig.qml  UtilConfig.qml  WorkspaceWidget.qml
Daemons/: Audio.qml  Network.qml  Nmcli.qml  NotifServer.qml
Drawers/: Backgrounds.qml  Bar.qml  Drawing.qml  DrawingInput.qml  Exclusions.qml  Interactions.qml  Panels.qml  Windows.qml
Effects/: ShadowRect.qml
Greeter/: Center.qml  Content.qml  GreeterState.qml  GreeterSurface.qml  InputField.qml  Resources.qml  SessionDock.qml  UserImage.qml  shell.qml
Helpers/: AppSearch.qml  AreaPicker.qml  Brightness.qml  Calendar.qml  DesktopUtils.qml  DockApps.qml  FileUtils.qml  GetIcons.qml  HasNotifications.qml  Hypr.qml  Icons.qml  IdleInhibitor.qml  InitialTitle.qml  ModeScheduler.qml  Network.qml  NetworkUsage.qml  NotifCenterSpacing.qml  NotifPath.qml  Picker.qml  Players.qml  SearchWallpapers.qml  Searcher.qml  SettingsDropdowns.qml  SystemInfo.qml  SystemUsage.qml  TaskbarApps.qml  TextRender.qml  ThemeIcons.qml  Time.qml  UPower.qml  Updates.qml  Visibilities.qml  WallpaperPath.qml  Wallpapers.qml  Wallust.qml  Weather.qml  Year.qml
Modules/: ActiveWindow.qml  Anim.qml  AppItem.qml  AudioPopup.qml  AudioWidget.qml  Background.qml  CAnim.qml  Clock.qml  Content.qml  CustomTextField.qml  CustomTrayMenu.qml  DashWidget.qml  GetIcons.qml  GroupListView.qml  Launcher.qml  MaterialEasing.qml  MediaWidget.qml  NotifBell.qml  NotifGroupRepeater.qml  NotifServer.qml  NotifServerOld.qml  Notification.qml  NotificationCenter.qml  NotificationCenterHeader.qml  PanelService.qml  Resource-old.qml  Resource.qml  ResourceDetail.qml  ResourcePopout-old.qml  ResourceUsage.qml  Resources.qml  Search.qml  Shortcuts.qml  SubMenu.qml  SwayNC.qml  (+16 more)
Plugins/ZShell/: CMakeLists.txt  appdb.cpp  appdb.hpp  imageanalyser.cpp  imageanalyser.hpp  qalculator.cpp  qalculator.hpp  requests.cpp  requests.hpp  toaster.cpp  toaster.hpp  writefile.cpp  writefile.hpp
Plugins/ZShell/Internal/: CMakeLists.txt  cachingimagemanager.cpp  cachingimagemanager.hpp  circularindicatormanager.cpp  circularindicatormanager.hpp  hyprdevices.cpp  hyprdevices.hpp  hyprextras.cpp  hyprextras.hpp
Plugins/ZShell/Models/: CMakeLists.txt  filesystemmodel.cpp  filesystemmodel.hpp
Plugins/ZShell/Services/: CMakeLists.txt  audiocollector.cpp  audiocollector.hpp  audioprovider.cpp  audioprovider.hpp  beattracker.cpp  beattracker.hpp  cavaprovider.cpp  cavaprovider.hpp  desktopmodel.cpp  desktopmodel.hpp  desktopstatemanager.cpp  desktopstatemanager.hpp  service.cpp  service.hpp  serviceref.cpp  serviceref.hpp
cli/: pyproject.toml
cli/src/zshell/subcommands/: scheme.py  shell.py  wallpaper.py
(+206 files in other folders)
